--- a/index.html
+++ b/index.html
@@ -11,11 +11,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <!--CSS-->
   <link rel="stylesheet" href="assets/css/styles.css" />
+    <!--ICONES-->
+    <script src="https://kit.fontawesome.com/6fe3d56d97.js" crossorigin="anonymous"></script>
   <title>Hackathon</title>
 </head>
 <body>
    <main class="wrapper">
      <h1>Bem vindos!!</h1>
    </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer-block">
+        <div class="Travel">
+        <h2>Travel</h2>
+        <p>Na Tourist você escolhe seu destino</p>
+        <p> e o levaremos!</p>
+          <div class="social"></div>
+            <a href="http://wwww.facebook.com.br" target="_blanck"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blanck"><i class="fa-brands fa-instagram"></i>
+            <a href="https://github.com/" target="_blanck"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/" target="_blanck"><i class="fa-brands fa-youtube"></i></a>
+          </div><!--div social-->
+        </div><!--div Travel-->
+      </div><!--div Footer-block-->
+    
+
+    <div class="footer-block">
+      <div class="sobre">
+      <h2>Sobre</h2>
+      <p><a href="" target="_blanck" class="link">Sobre nós</a></p>
+      <p><a href="" target="_blanck" class="link">Novidades</a></p>
+      </div><!--div sobre-->
+    </div><!--div Footer-block-->
+
+    <div class="footer-block">
+      <div class="companhia"></div>
+      <h2>Companhia</h2>
+      <p><a href="" target="_blanck" class="link">Equipe</a></p>
+      <p><a href="" target="_blanck" class="link">Planos e Preços</a></p>
+      <p><a href="" target="_blanck" class="link">Torne-se um Membro</a></p>
+    </div><!--div companhia-->
+    </div><!--div Footer-block-->
+
+    <div class="footer-block">
+      <div class="suporte"></div>
+      <h2>Suporte</h2>
+      <p><a href="" target="_blanck" class="link">FAQs</a></p>
+      <p><a href="" target="_blanck" class="link">Central de Suporte</a></p>
+      <p><a href="" target="_blanck" class="link">Contato</a></p>
+     </div><!--div companhia-->
+  </div><!--div Footer-block-->
+    <div class="clear"></div>
+  </div><!--div Footer-->
+</div><!--div container-->
+
+
+  </footer>
 </body>
 </html>
